Terraform/helloworld.yaml
apiVersion: v1
kind: Service
metadata:
  name: tradingservice
  labels:
    app: tradingservice
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: tradingservice
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tradingservice-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tradingservice
        version: v1
    spec:
      containers:
      - name: tradingservice
        image: gcr.io/orbital-scene-220409/trading-microservice:v1
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 5000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tradingservice-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tradingservice
        version: v2
    spec:
      containers:
      - name: tradingservice
        image: gcr.io/orbital-scene-220409/trading-microservice:v2
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: accountservice
  labels:
    app: accountservice
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: accountservice
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: accountservice-v9
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: accountservice
        version: v9
    spec:
      containers:
      - name: accountservice
        image: gcr.io/orbital-scene-220409/account-microservice:v9
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 5000
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tradingservice
spec:
  hosts:
  - "*"
  gateways:
  - helloworld-gateway
  http:
  - match:
    - uri:
        exact: /tradingService
    route:
    - destination:
        host: tradingservice
        port:
          number: 5000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: accountservice
spec:
  hosts:
  - "*"
  gateways:
  - helloworld-gateway
  http:
  - match:
    - uri:
        exact: /accountService
    route:
    - destination:
        host: accountservice
        port:
          number: 5000
